...

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/double_card_layout"
        android:layout_below="@+id/search_layout"
        android:layout_marginBottom="0dp"
        android:cacheColorHint="#00000000"
...
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_popup_bottom_right"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/ok_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
...
