...
        android:layout_alignParentTop="true"
		android:button="@drawable/rounded_checkbox"
        android:focusable="false">
    </CheckBox>

    <TextView
        android:id="@+id/list_item_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/lv_title_padding_left"
        android:layout_toRightOf="@id/list_item_icon"
        android:layout_toLeftOf="@id/list_item_checkbox"
        android:lines="1"
...
